Closed Bug 1260391 Opened 9 years ago Closed 9 years ago

B2GOS: gfx/layers/ipc/ImageBridgeChild.cpp:230:29: error: no matching function for call to 'mozilla::layers::OpUseOverlaySource::OpUseOverlaySource(std::nullptr_t, mozilla::layers::PCompositableChild*, const OverlaySource&, const nsIntRect&)'

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla48
Tracking Status
firefox48 --- fixed

People

(Reporter: gwagner, Assigned: tzimmermann)

References

Details

Attachments

(2 files, 2 obsolete files)

No description provided.
Blocks: 1256517, 1245091
That's a build fix. I still have boot issues with b2g, which prevent me from testing.
Attachment #8735788 - Flags: review?(dvander)
See Also: → 1256517
Comment on attachment 8735788 [details] [diff] [review] [01] Bug 1260391: Fix |CompositableOperation| on B2G This fix crashes with https://pastebin.mozilla.org/8865428
Attachment #8735788 - Flags: review?(dvander)
Attached file gdb stacktrace with build patch (obsolete) —
The pastebin will expire tomorrow, let's keep this in bugzilla :)
This is part 1 of the patch set. It should work.
Attachment #8735788 - Attachment is obsolete: true
There's another issue in |ShadowLayerForwarder::RemoveTextureFromCompositableAsync|. This will probably require a larger change.
Assignee: nobody → tzimmermann
Attachment #8735837 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #8735857 - Flags: review?(dvander)
Attachment #8735843 - Flags: review?(dvander)
This patch set fixes the problem for me.
Blocks: 1260441
Attachment #8735843 - Flags: review?(dvander) → review+
Comment on attachment 8735857 [details] [diff] [review] [02] Bug 1260391: Transfer |CompositableOperation| in |AsyncChildMessageData| Review of attachment 8735857 [details] [diff] [review]: ----------------------------------------------------------------- We can probably remove the "compositable" field from OpRemoveTexture after this.
Attachment #8735857 - Flags: review?(dvander) → review+
Thomas, I think we could benefit from this being pushed to pine instead of having to wait the next mozilla-central merge there :)
Flags: needinfo?(tzimmermann)
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: