Bug 1260391: Transfer |CompositableOperation| in |AsyncChildMessageData|, r=dvander